Usa la clase HttpClient para la request